# sheet-excavator

./: Cargo.toml  README.md  TODO.md  pyproject.toml
.github/workflows/: build_wheels.yml
pytest/: test.ipynb  test.py
src/: lib.rs  parallel.rs  read_excel.rs  utils.rs
src/utils/: conversions.rs  dataframe.rs  manipulations.rs  multirow_patterns.rs  single_cells.rs
wheels/: sheet_excavator-0.1.0-cp312-none-win_amd64.whl  sheet_excavator-0.1.1-cp312-none-win_amd64.whl  sheet_excavator-0.1.10-cp312-none-win_amd64.whl  sheet_excavator-0.1.11-cp312-none-win_amd64.whl  sheet_excavator-0.1.12-cp312-none-win_amd64.whl  sheet_excavator-0.1.13-cp312-none-win_amd64.whl  sheet_excavator-0.1.14-cp312-none-win_amd64.whl  sheet_excavator-0.1.15-cp312-none-win_amd64.whl  sheet_excavator-0.1.16-cp312-none-win_amd64.whl  sheet_excavator-0.1.17-cp312-none-win_amd64.whl  sheet_excavator-0.1.18-cp312-none-win_amd64.whl  sheet_excavator-0.1.19-cp312-none-win_amd64.whl  sheet_excavator-0.1.2-cp312-none-win_amd64.whl  sheet_excavator-0.1.20-cp312-none-win_amd64.whl  sheet_excavator-0.1.21-cp312-none-win_amd64.whl  sheet_excavator-0.1.22-cp312-none-win_amd64.whl  sheet_excavator-0.1.23-cp312-none-win_amd64.whl  sheet_excavator-0.1.24-cp312-none-win_amd64.whl  sheet_excavator-0.1.25-cp312-none-win_amd64.whl  sheet_excavator-0.1.26-cp312-none-win_amd64.whl  sheet_excavator-0.1.27-cp312-none-win_amd64.whl  sheet_excavator-0.1.28-cp312-none-win_amd64.whl  sheet_excavator-0.1.3-cp312-none-win_amd64.whl  sheet_excavator-0.1.4-cp312-none-win_amd64.whl  sheet_excavator-0.1.5-cp312-none-win_amd64.whl  sheet_excavator-0.1.6-cp312-none-win_amd64.whl  sheet_excavator-0.1.7-cp312-none-win_amd64.whl  sheet_excavator-0.1.8-cp312-none-win_amd64.whl  sheet_excavator-0.1.9-cp312-none-win_amd64.whl
