[package]
name = "sheet_excavator"
version = "0.1.29"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sheet_excavator"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.81"
calamine = "0.24.0"
chrono = "0.4.38"
futures = "0.3.30"
indexmap = "2.2.6"
pyo3 = "0.20.0"
serde_json = { version = "1.0.115", features = ["preserve_order"] }
tokio = {version = "1.37.0", features = ["full"] }
