[package]
name = "sheet_excavator"
version = "0.1.31"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sheet_excavator"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
calamine = "0.26.1"
chrono = "0.4.40"
futures = "0.3.31"
indexmap = "2.8.0"
pyo3 = "0.21.2"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = {version = "1.44.0", features = ["full"] }
